the second commit

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <img src="images/avatar img.webp" alt="">
                     </div>
 
-                    <h2>bin Ahmed</h2>
+                    <h2>Bin Ahmed</h2>
 
                     <h4> Front End Developer </h4>
                 </div>
@@ -38,7 +38,7 @@
 
                         <div class="info">
                             <h3>Name :</h3>
-                            <p>Bin Ahmed</p>
+                            <p>Omar Bin Ahmed</p>
                         </div>
                     </div>
 
@@ -98,6 +98,39 @@
                         </div>
                     </div>
 
+                    <div class="box">
+                        <i class="fa-solid fa-flag"></i>
+
+                        <div class="info">
+                            <h3>Nationality :</h3>
+                            <p>Palestine</p>
+                        </div>
+                    </div>
+
+                    <div class="box_percent">
+
+                        <div class="info">
+                            <i class="fa-solid fa-globe"></i>
+
+                            <h3>Languages</h3>
+
+                            <li>
+                                <p class="text">Arabic</p>
+                                <div class="percent">
+                                    <span style="width: 95%;"></span>
+                                </div>
+                            </li>
+
+                            <li>
+                                <p class="text">English</p>
+                                <div class="percent">
+                                    <span style="width: 60%;"></span>
+                                </div>
+                            </li>
+
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
@@ -115,79 +148,12 @@
 
                     <div class="article__grid">
 
-                        <!-- 01 = app todo list-->
-                        <div class="article__item all app">
-
-                            <div class="article__image"></div>
-
-                            <div class="article__text">
-
-                                <h3>Todo List</h3>
-
-                                <a target="_blank" href="https://mr-dev-9.github.io/todo-list/">
-                                    <i class="fa-brands fa-github"></i>
-                                    github
-                                </a>
-
-                                <a href="https://youtu.be/-HAWWXSLy1M" target="_blank">
-                                    <i class="fa-brands fa-youtube"></i>
-                                    youtube
-                                </a>
-
-                            </div>
-
-                        </div>
-
-                        <!-- 02 = app Shopping Cart -->
-                        <div class="article__item all app">
-
-                            <div class="article__image"></div>
-
-                            <div class="article__text">
-
-                                <h3>Shopping Cart</h3>
-
-                                <a target="_blank" href="https://mr-dev-9.github.io/shopping-cart/">
-                                    <i class="fa-brands fa-github"></i>
-                                    github
-                                </a>
-
-                                <a href="https://youtu.be/6nSSEU6MmzY" target="_blank">
-                                    <i class="fa-brands fa-youtube"></i>
-                                    youtube
-                                </a>
-
-                            </div>
-
-                        </div>
-
-                        <!-- 03 = app Slider-->
-                        <div class="article__item all app">
-
-                            <div class="article__image"></div>
-
-                            <div class="article__text">
-
-                                <h3>Slider</h3>
-
-                                <a target="_blank" href="https://mr-dev-9.github.io/slider/">
-                                    <i class="fa-brands fa-github"></i>
-                                    github
-                                </a>
-
-                                <a href="https://youtu.be/0uspAQgP1k4" target="_blank">
-                                    <i class="fa-brands fa-youtube"></i>
-                                    youtube
-                                </a>
-
-                            </div>
-
-                        </div>
 
 
 
-                        <!-- 04 = Car-->
-                        <div class="article__item hide template">
+
+                        <!-- 01 = Car-->
+                        <div class="article__item all template">
 
                             <div class="article__image"></div>
 
@@ -209,7 +175,7 @@
 
                         </div>
 
-                        <!-- 05 = Food-->
+                        <!-- 02 = Food-->
                         <div class="article__item all template">
 
                             <div class="article__image"></div>
@@ -232,7 +198,7 @@
 
                         </div>
 
-                        <!-- 06 = Flowers -->
+                        <!-- 03 = Flowers -->
                         <div class="article__item hide template">
 
                             <div class="article__image"></div>
@@ -255,7 +221,7 @@
 
                         </div>
 
-                        <!-- 07 = Coffee -->
+                        <!-- 04 = Coffee -->
                         <div class="article__item all template">
 
                             <div class="article__image"></div>
@@ -278,7 +244,7 @@
 
                         </div>
 
-                        <!-- 08 = Book -->
+                        <!-- 05 = Book -->
                         <div class="article__item hide template">
 
                             <div class="article__image"></div>
@@ -301,7 +267,7 @@
 
                         </div>
 
-                        <!-- 09 = Hospital -->
+                        <!-- 06 = Hospital -->
                         <div class="article__item hide template">
 
                             <div class="article__image"></div>
@@ -324,7 +290,7 @@
 
                         </div>
 
-                        <!-- 10 = Shoes  -->
+                        <!-- 07 = Shoes  -->
                         <div class="article__item hide template">
 
                             <div class="article__image"></div>
@@ -347,7 +313,7 @@
 
                         </div>
 
-                        <!-- 11 = Fitness -->
+                        <!-- 08 = Fitness -->
                         <div class="article__item hide template">
 
                             <div class="article__image"></div>
@@ -370,6 +336,74 @@
 
                         </div>
 
+                        <!-- 09 = app todo list-->
+                        <div class="article__item all app">
+
+                            <div class="article__image"></div>
+
+                            <div class="article__text">
+
+                                <h3>Todo List</h3>
+
+                                <a target="_blank" href="https://mr-dev-9.github.io/todo-list/">
+                                    <i class="fa-brands fa-github"></i>
+                                    github
+                                </a>
+
+                                <a href="https://youtu.be/-HAWWXSLy1M" target="_blank">
+                                    <i class="fa-brands fa-youtube"></i>
+                                    youtube
+                                </a>
+
+                            </div>
+
+                        </div>
+
+                        <!-- 10 = app Shopping Cart -->
+                        <div class="article__item all app">
+
+                            <div class="article__image"></div>
+
+                            <div class="article__text">
+
+                                <h3>Shopping Cart</h3>
+
+                                <a target="_blank" href="https://mr-dev-9.github.io/shopping-cart/">
+                                    <i class="fa-brands fa-github"></i>
+                                    github
+                                </a>
+
+                                <a href="https://youtu.be/6nSSEU6MmzY" target="_blank">
+                                    <i class="fa-brands fa-youtube"></i>
+                                    youtube
+                                </a>
+
+                            </div>
+
+                        </div>
+
+                        <!-- 11 = app Slider-->
+                        <div class="article__item hide app">
+
+                            <div class="article__image"></div>
+
+                            <div class="article__text">
+
+                                <h3>Slider</h3>
+
+                                <a target="_blank" href="https://mr-dev-9.github.io/slider/">
+                                    <i class="fa-brands fa-github"></i>
+                                    github
+                                </a>
+
+                                <a href="https://youtu.be/0uspAQgP1k4" target="_blank">
+                                    <i class="fa-brands fa-youtube"></i>
+                                    youtube
+                                </a>
+
+                            </div>
+
+                        </div>
 
 
                         <!-- 12 = game-->
